--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,13 +3,14 @@ GameName=MyProject
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPerson/Maps/MainMenu.MainMenu
-GameDefaultMap=/Game/ThirdPerson/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/ThirdPerson/Maps/Level1.Level1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/ThirdPerson/Maps/BPC_GameInstance.BPC_GameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
