--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=MyProject
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPerson/Maps/MainMenu.MainMenu
-GameDefaultMap=/Game/ThirdPerson/Maps/Level1.Level1
+GameDefaultMap=/Game/Level/onescreen.onescreen
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
